<resources>
    <string name="app_name">PADC-Firebase-Samples</string>
    <string name="action_settings">Settings</string>

    <string name="msg_default_empty">သက်ဆိုင်ရာ data များ ပြရန် မရှိသေးပါ</string>
    <string name="launcher_name">MM-News</string>
    <string name="screen_title_newsfeed">MM-News (news for Myanmar people)</string>

    <string name="tv_format_posted_date"><![CDATA[Posted At : <xliff:g id="posted_date">%1$s</xliff:g>]]></string>
    <string name="format_total_reactions"><![CDATA[<xliff:g id="like_count">%1$d</xliff:g> Likes - <xliff:g id="comment_count">%2$d</xliff:g> Comments - Sent to <xliff:g id="sent_to_count">%3$d</xliff:g> people]]></string>

    <string name="feed_action_comment">Comment</string>
    <string name="feed_action_send">Send To</string>

    <string name="dummy_news">အခွန်အယူခံအဖွဲ့သို့ တင်သွင်းသည့် အမှုအရေအတွက်များနေသည့်အပြင် ခိုင်မာသည့် ဥပဒေမရှိသည့်အတွက် ဥပဒေနှင့်အညီ ဖွဲ့စည်းဆောင်ရွက်သည့် အခွန်အယူခံအဖွဲ့ ဖြစ်စေရန် အခွန်အယူခံအဖွဲ့ ဥပဒေကြမ်းအား ပြည်ထောင်စုလွှတ်တော်သို့ သြဂုတ် ၁၇ ရက်တွင် စီမံကိန်းနှင့်ဘဏ္ဍာရေးဝန်ကြီးဌာန ဒုတိယဝန်ကြီး ဦးမောင်မောင်ဝင်းက တင်သွင်းခဲ့သည်။

ဒုတိယဝန်ကြီးက ၂၀၁၆ ခုနှစ်အတွင်း အခွန်အယူခံအဖွဲ့သို့ တင်သွင်းလာသော အမှုပေါင်း ၁၂၃ မှုရှိပြီး အကောက်ခွန်အယူခံမှု ၁၀၄ မှု၊ အကောက်ခွန်ပြန်လည်သုံးသပ်မှု ၁၉ မှုရှိကြောင်း၊ အမှု ၁၂၃ မှုအား စစ်ဆေးခဲ့ပြီး အကောက်ခွန်အယူခံ ၄၃ မှု၊ အကောက်ခွန်ပြန်လည်သုံးသပ်မှု ၁၁ မှုအား ပလပ်ခဲ့ကြောင်း၊ အကောက်ခွန်အယူခံမှု ၅၇ မှုနှင့် အကောက်ခွန်ပြန်လည်သုံးသပ်မှု ရှစ်မှုအား ရွေးယူဒဏ်ငွေစနစ်ဖြင့် ပြန်လည်ပေးအပ်ခဲ့ကြောင်း၊ အကောက်ခွန်အယူခံမှု နှစ်မှုအား အကျဉ်းနည်းဖြင့် စစ်ဆေးပြီး ပလပ်ခဲ့ကာ  အကောက်ခွန်အယူခံမှု နှစ်မှုကို ရုပ်သိမ်းခွင့် ပြုခဲ့ကြောင်း လွှတ်တော်၌ ပြောကြားသည်။


အခွန်အယူခံအဖွဲ့သို့ တင်သွင်းလာသည့် အကောက်ခွန်အမှုနှင့် အခွန်အယူခံမှုများမှာ တစ်နှစ်ထက်တစ်နှစ် များလာပြီး နှစ်ပေါင်း ၅၀ ကျော်ကြာသည့်တိုင် အစိုးရအဖွဲ့၏ အမိန့်ကြော်ငြာစာဖြင့်သာ လုပ်ပိုင်ခွင့်နှင့် လုပ်ထုံးလုပ်နည်းများ သတ်မှတ်ဆောင်ရွက်နေရခြင်းဖြစ်ကြောင်း၊ ခိုင်မာသောဥပဒေ ကျောထောက်ခံမရှိခဲ့ကြောင်း၊ လက်ရှိအချိန်တွင် ဒီမိုကရေစီစနစ်ကို ကျင့်သုံးလျက်ရှိရာ  ဥပဒေပြုလွှတ်တော်များ ပေါ်ပေါက်ပြီး ခေတ်နှင့်အညီ ဥပဒေများ ပြဋ္ဌာန်းဆောင်ရွက်လျက်ရှိကြောင်း၊ ထို့အတွက် ဥပဒေနှင့်အညီ ဖွဲ့စည်းဆောင်ရွက်သည့် အခွန်အယူခံအဖွဲ့ဖြစ်လာရန် ရည်ရွယ်ပြီး အခွန်အယူခံအဖွဲ့ဥပဒေကြမ်းကို ရေးဆွဲတင်ပြရခြင်းဖြစ်ကြောင်း ဒုတိယဝန်ကြီးက ပြောကြားသည်။
ဥပဒေကြမ်း၏ အပိုဒ် ၃ တွင် နိုင်ငံတော်က ဥပဒေနှင့်အညီ အခွန်စည်းကြပ်ကောက်ခံရာတွင် စွမ်းဆောင်ရည်မြင့်မားသော အခွန်စီမံခန့်ခွဲမှုဖြစ်လာစေရန်နှင့် အခွန်ထမ်းများ၏ ယုံကြည်ကိုးစားမှုကိုရရှိစေရန်၊ နိုင်ငံသားနှင့် အခွန်ထမ်းတိုင်းသည် ဥပဒေအရ ပေးဆောင်ရမည့် အခွန်အကောက်များကို ပေးဆောင်ရာ၌ တန်းတူညီမျှမှုနှင့် တရားမျှတမှု အခွင့်အရေးရရှိစေရန်၊ နိုင်ငံသားနှင့်အခွန် ထမ်းတိုင်းသည် ဥပဒေအရပေးဆောင်ရမည့် အခွန်အကောက်များကို ဥပဒေနှင့်အညီ ခုခံချေပခွင့်နှင့် အယူခံပိုင်ခွင့်ရရှိစေရန်ဖြစ်ကြောင်း ၎င်းက ဆက်လက်ပြောကြားသည်။

အခွန်အယူခံအဖွဲ့အား ၁၉၅၄၊ ၁၉၇၂၊ ၁၉၇၆၊ ၁၉၈၉၊ ၂၀၁၇ ခုနှစ်များတွင် အစိုးရ အဆက်ဆက် အမိန့်ကြော်ငြာစာထုတ်ပြန်၍ တာဝန်နှင့်လုပ်ပိုင်ခွင့်များ သတ်မှတ်ပြီး ဆောင်ရွက်ခဲ့ခြင်းဖြစ်ကြောင်း၊ အခွန်အယူခံ အဖွဲ့ရုံးသည် ပြည်တွင်းအခွန်များဦးစီးဌာနမှ အခွန်စည်းကြပ်ကောက်ခံမှုများ၊ အကောက်ခွန်ဦးစီးဌာနမှ ကုန်ပစ္စည်းများနှင့် မော်တော်ယာဉ်များအား ပြည်သူ့ဘဏ္ဍာအဖြစ် သိမ်းဆည်းမှုများ၊ ဒဏ်ငွေတပ်ရိုက်ခြင်းများအပေါ် ကျေနပ်မှုမရှိသည့် အခွန်ထမ်းပြည်သူများ၊ ကုမ္ပဏီများ၊ သမဝါယမအသင်းများ၊ ကုန်ပစ္စည်းပိုင်ရှင်များနှင့် ယာဉ်ပိုင်ရှင်များစသည့် တစ်ဦးချင်းပုဂ္ဂိုလ်တို့က အခွန်အကောက်ဆိုင်ရာ ဥပဒေများနှင့်အညီ အခွန်အယူခံမှုအဖြစ် လျှောက်ထားတင်သွင်းလာသော အယူခံမှု၊ ပြင်ဆင်မှု၊ ပြန်လည်သုံးသပ်မှုနှင့် လွှဲအပ်မှုများကို တည်ဆဲအခွန်အကောက်ဥပဒေ၊ နည်းဥပဒေ၊ စည်းမျဉ်းများနှင့်အညီ စစ်ဆေးကြားနာဆုံးဖြတ်ပေးလျက်ရှိကြောင်း ဒုတိယဝန်ကြီးက လွှတ်တော်၌ ရှင်းလင်းခဲ့သည်။</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus</string>
    <string name="btn_add_news">Publish</string>
    <string name="screen_title_add_news">Publish News</string>

    <string name="lbl_add_photo">သတင်းဓါတ်ပုံ</string>
    <string name="noti_action_save_news">Save News</string>
    <string name="feed_action_love">Love</string>
    <string name="action_invite_to_app">Invite to App</string>

    <string name="invitation_title">Join MM-News</string>
    <string name="invitation_message">Be informed on the news that matter to Myanmar people</string>
    <string name="invitation_cta">I want to join</string>
</resources>
